Fix Spacing of Badges within the Actions Dropdown

--- a/stylesheets/_component.badges.scss
+++ b/stylesheets/_component.badges.scss
@@ -97,3 +97,9 @@ a.list-group-item.active > .badge,
         color: color(warning, dark) !important;
     }
 }
+
+.has-badges {
+    span.badge {
+        margin: 0 5px;
+    }
+}
